Fixed nav alignment

--- a/project.css
+++ b/project.css
@@ -111,6 +111,7 @@ footer { background-color: #626B84;
 	font-size: 1.25em; 
 	width: auto; 
 	border-bottom: 1px solid #000000;
+	margin-left: -50px;
 	}
 	nav li { display: block; }
 	h1 { padding-bottom: .5em;
